ext/psip/build_sipclient_final_v3.txt
[ 12%] Built target SipPlatform
[ 15%] Built target XmlParser
[ 23%] Built target HttpParser
[ 23%] Built target StunParser
[ 37%] Built target SdpParser
[ 45%] Built target opensrtp
[ 53%] Built target TcpStack
[ 65%] Built target SipParser
[ 67%] Built target HttpStack
[ 84%] Built target SipStack
[ 89%] Built target ServerPlatform
[ 95%] Built target SipUserAgent
[ 96%] Building CXX object CMakeFiles/SipClient.dir/SipClient/RtpThread.cpp.o
In file included from /mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThread.cpp:35:
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThreadRecv.hpp: In function ?쁵oid* RtpThreadRecv(void*)??
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThreadRecv.hpp:38:7: error: ?쁂heckError??was not declared in this scope; did you mean ?쁥error??
   38 |   if (CheckError(n, "snd_pcm_open"))
      |       ^~~~~~~~~~
      |       herror
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThreadRecv.hpp:47:7: error: ?쁂heckError??was not declared in this scope; did you mean ?쁥error??
   47 |   if (CheckError(n, "snd_pcm_hw_params_set_access"))
      |       ^~~~~~~~~~
      |       herror
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThreadRecv.hpp:51:7: error: ?쁂heckError??was not declared in this scope; did you mean ?쁥error??
   51 |   if (CheckError(n, "snd_pcm_hw_params_set_access"))
      |       ^~~~~~~~~~
      |       herror
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThreadRecv.hpp:55:7: error: ?쁂heckError??was not declared in this scope; did you mean ?쁥error??
   55 |   if (CheckError(n, "snd_pcm_hw_params_set_channels"))
      |       ^~~~~~~~~~
      |       herror
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThreadRecv.hpp:60:7: error: ?쁂heckError??was not declared in this scope; did you mean ?쁥error??
   60 |   if (CheckError(n, "snd_pcm_hw_params_set_rate_near"))
      |       ^~~~~~~~~~
      |       herror
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThreadRecv.hpp:64:7: error: ?쁂heckError??was not declared in this scope; did you mean ?쁥error??
   64 |   if (CheckError(n, "snd_pcm_hw_params"))
      |       ^~~~~~~~~~
      |       herror
/mnt/c/Users/nex/Desktop/work/cIMS/media/cims/ext/psip/SipClient/RtpThreadRecv.hpp:86:18: error: ?쁂heckError??was not declared in this scope; did you mean ?쁥error??
   86 |       } else if (CheckError(n, "snd_pcm_writei"))
      |                  ^~~~~~~~~~
      |                  herror
gmake[3]: *** [CMakeFiles/SipClient.dir/build.make:90: CMakeFiles/SipClient.dir/SipClient/RtpThread.cpp.o] Error 1
gmake[2]: *** [CMakeFiles/Makefile2:537: CMakeFiles/SipClient.dir/all] Error 2
gmake[1]: *** [CMakeFiles/Makefile2:544: CMakeFiles/SipClient.dir/rule] Error 2
gmake: *** [Makefile:306: SipClient] Error 2
